updated jre version

--- a/test-output/old/Automation Tes Suite/methods.html
+++ b/test-output/old/Automation Tes Suite/methods.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Tes Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:11:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="aac163">  <td>19/05/06 10:11:55</td>   <td>1841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_002_RegisterWithInvalidDataTest.setUp()[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@5a1c0542]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@111746992</td>   <td></td> </tr>
-<tr bgcolor="96b684">  <td>19/05/06 10:11:55</td>   <td>1846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_003_ValidateDatabaseTest.setUp()[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@4d95d2a2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1227898957</td>   <td></td> </tr>
-<tr bgcolor="96b684">  <td>19/05/06 10:12:07</td>   <td>13900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_ValidateDatabaseTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@4d95d2a2]">validateRegistration</td> 
-  <td>TestNG-tests-3@1227898957</td>   <td></td> </tr>
-<tr bgcolor="aac163">  <td>19/05/06 10:12:09</td>   <td>15764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_RegisterWithInvalidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@5a1c0542]">validateRegistration</td> 
-  <td>TestNG-tests-2@111746992</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:09</td>   <td>15883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validatePageTitle()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">validatePageTitle</td> 
-  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:10</td>   <td>16215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="96b684">  <td>19/05/06 10:12:15</td>   <td>21828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_003_ValidateDatabaseTest.endTest()[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@4d95d2a2]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@1227898957</td>   <td></td> </tr>
-<tr bgcolor="aac163">  <td>19/05/06 10:12:17</td>   <td>23511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_002_RegisterWithInvalidDataTest.endTest()[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@5a1c0542]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@111746992</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:18</td>   <td>24564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:24</td>   <td>30778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">validateRegistration</td> 
-  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:27</td>   <td>33669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:28</td>   <td>34635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:34</td>   <td>40950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">validateRegistration</td> 
-  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:37</td>   <td>43967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:38</td>   <td>45193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:45</td>   <td>51788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">validateRegistration</td> 
-  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>19/05/06 10:12:48</td>   <td>54347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@3224f60b]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@896653955</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:12:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="b8b48f">  <td>19/06/24 11:12:37</td>   <td>1738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_002_RegisterWithInvalidDataTest.setUp()[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@595b007d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1655467069</td>   <td></td> </tr>
+<tr bgcolor="93b085">  <td>19/06/24 11:12:37</td>   <td>1738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_003_ValidateDatabaseTest.setUp()[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@35cabb2a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@1535752423</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:12:48</td>   <td>12321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validatePageTitle()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">validatePageTitle</td> 
+  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:12:48</td>   <td>12409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="b8b48f">  <td>19/06/24 11:12:49</td>   <td>13651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_RegisterWithInvalidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@595b007d]">validateRegistration</td> 
+  <td>TestNG-tests-2@1655467069</td>   <td></td> </tr>
+<tr bgcolor="93b085">  <td>19/06/24 11:12:49</td>   <td>13825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_ValidateDatabaseTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@35cabb2a]">validateRegistration</td> 
+  <td>TestNG-tests-3@1535752423</td>   <td></td> </tr>
+<tr bgcolor="93b085">  <td>19/06/24 11:12:54</td>   <td>18195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_003_ValidateDatabaseTest.endTest()[pri:0, instance:com.qa.test.TC_003_ValidateDatabaseTest@35cabb2a]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@1535752423</td>   <td></td> </tr>
+<tr bgcolor="b8b48f">  <td>19/06/24 11:12:54</td>   <td>18591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_002_RegisterWithInvalidDataTest.endTest()[pri:0, instance:com.qa.test.TC_002_RegisterWithInvalidDataTest@595b007d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1655467069</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:12:56</td>   <td>20206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:01</td>   <td>25997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">validateRegistration</td> 
+  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:04</td>   <td>28391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:05</td>   <td>29211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:10</td>   <td>34783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">validateRegistration</td> 
+  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:13</td>   <td>37083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:13</td>   <td>37887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_001_RegisterWithValidDataTest.setUp()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:19</td>   <td>43694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_RegisterWithValidDataTest.validateRegistration(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">validateRegistration</td> 
+  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
+<tr bgcolor="67e66c">  <td>19/06/24 11:13:22</td>   <td>46073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_001_RegisterWithValidDataTest.endTest()[pri:0, instance:com.qa.test.TC_001_RegisterWithValidDataTest@47af7f3d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1025277694</td>   <td></td> </tr>
 </table>
